<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="220dp"
    android:background="#00000000">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.44"
                android:gravity="center"
                android:text="@string/audit"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_weight="0.28"
                android:background="@drawable/shape_red"
                android:gravity="center"
                android:text="@string/asset_audit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_15" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.28"
                android:background="@drawable/shape_green"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dp_8"
                android:text="@string/loctaion_audit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_15"
                android:id="@+id/btn_location_audit"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.28"
                android:background="@drawable/shape_blue"
                android:gravity="center"
                android:text="@string/express_audit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_15" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>

