<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-1dp"
    android:orientation="vertical"
    tools:context=".LocationAudit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.11"
        android:background="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.68"
                android:gravity="left|center"
                android:paddingLeft="@dimen/dp_5"
                android:text="@string/check_out"
                android:textColor="@color/colorWhite"
                android:textSize="22dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/bluetooth"></ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.02"
                android:background="@color/red"></TextView>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/settings_work_tool"></ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:background="@color/black">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.73"
            android:gravity="center"
            android:text="@string/check_out_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dp_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.83"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/to1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="0.6"
                    android:text="User"></CheckBox>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/roll"></CheckBox>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="0.6"
                    android:text="@string/vendor"></CheckBox>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/badge_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:gravity="left|center"
                    android:background="@drawable/bg_edittext"
                    android:drawableRight="@drawable/ic_search_black_24dp"
                    android:paddingLeft="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_5"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/to2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <Spinner
                    style="@style/SpinnerTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:entries="@array/transfer_reasons"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/dp_5"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/to_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <Spinner
                    style="@style/SpinnerTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:entries="@array/transfer_reasons"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/dp_5"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/check_out_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <Spinner
                    style="@style/SpinnerTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:entries="@array/transfer_reasons"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/dp_5"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/print_receipt"></CheckBox>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"></LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dp_20" />

</LinearLayout>