<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_red"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.25">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.0.0.0"
                android:layout_alignParentTop="true"
                android:textColor="@color/title"
                android:textSize="15dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edittext_login"
                android:hint="@string/username"
                android:textColor="@color/colorWhite"
                android:layout_centerInParent="true"
                android:textColorHint="@color/colorWhite"
                android:paddingLeft="@dimen/dp_10"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edittext_login"
                android:hint="@string/password"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:layout_centerInParent="true"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp_10"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/login"
                android:background="@drawable/shape_green_round"
                android:textColor="@color/colorWhite"
                android:layout_centerInParent="true"
                android:onClick="login"
                android:textSize="@dimen/dp_18"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="or"
                android:background="@drawable/circle_white"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/dp_18"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <Button
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:text="@string/settings"
                android:background="@drawable/shape_blue_round"
                android:textColor="@color/colorWhite"
                android:layout_centerInParent="true"
                android:onClick="settings"
                android:textSize="@dimen/dp_18"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"></LinearLayout>

</LinearLayout>