<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="130dp"
    android:background="#00000000">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.62"
                android:gravity="center"
                android:text="@string/checkout"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.38">


                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/shape_red"
                        android:gravity="center"
                        android:layout_gravity="right|center"
                        android:text="@string/check_out"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/dp_15"
                        android:layout_marginTop="@dimen/dp_3"
                        android:layout_marginBottom="@dimen/dp_3"
                        android:layout_marginRight="@dimen/dp_5"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/shape_green"
                        android:text="@string/check_in"
                        android:layout_gravity="left|center"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_marginTop="@dimen/dp_3"
                        android:layout_marginBottom="@dimen/dp_3"/>


            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>

