<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-1dp"
    android:orientation="vertical"
    tools:context=".LocationAudit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.11"
        android:background="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.68"
                android:gravity="left|center"
                android:paddingLeft="@dimen/dp_5"
                android:text="@string/check_in"
                android:textColor="@color/colorWhite"
                android:textSize="22dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/bluetooth"></ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.02"
                android:background="@color/red"></TextView>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/settings_work_tool"></ImageView>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.73"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="left|center"
                    android:text="@string/to_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_18" />

                <Spinner
                    style="@style/SpinnerTheme"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:entries="@array/transfer_to"></Spinner>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.5">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dp_5"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/print_receipt_in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_18"

                    />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_green"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="@string/scan_assets"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dp_20" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:background="#E5E5E5">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.73"
            android:gravity="center"
            android:text="Connected To: 00:04:3E:9F:OD:27"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/blue">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_3"
                android:layout_marginRight="@dimen/dp_3"
                android:src="@drawable/cog"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/process"
                android:gravity="top|center"
                android:textSize="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_5"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/blue2"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_3"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_3"
                android:src="@drawable/eraser"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:text="@string/clear"
                android:gravity="top|center"
                android:textSize="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_5"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>